--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@nx/devkit": "^21.2.2",
     "mobx": "^6.13.7",
     "mobx-react": "^9.2.0",
@@ -12,6 +13,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "6.29.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
