--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@headlessui/react": "^2.2.4",
     "@nx/devkit": "^21.2.2",
+    "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6",
     "mobx": "^6.13.7",
     "mobx-react": "^9.2.0",
     "open": "^10.1.2",
