feat: implement i18n internationalization with English translations

--- a/apps/rick-and-morty/tsconfig.app.json
+++ b/apps/rick-and-morty/tsconfig.app.json
@@ -31,5 +31,8 @@
     "**/*.stories.jsx",
     "**/*.stories.tsx"
   ],
-  "include": ["src/**/*", "../../libs/rick-and-morty/**/*"]
+  "include": [
+    "src",
+    "src/**/*.json"
+  ]
 }
