--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@nx/devkit": "^21.2.2",
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
+    "i18next": "^25.3.1",
     "mobx": "^6.13.7",
     "mobx-react": "^9.2.0",
     "open": "^10.1.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "6.29.0",
